--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GetLab</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Em produção</h1>
+    <div class="tarjeta">
+      <h2>GetLab</h2>
+    </div>
+    <br />
+    <p class="centered-text">
+      Página destinada a publicação dos arquivos relacionados ao Projeto
+      Integrador III - 4ª Fase / ADS
+    </p>
+    <p class="centered-text">
+      <strong>Alunos:</strong>
+    </p>
+
+    <ul class="lista-alunos">
+      <li>Diogo Vieira</li>
+      <li>Eriksson Luiz Carneiro Perozin</li>
+      <li>Leonardo de Campos</li>
+      <li>Vitor Machado Silva</li>
+    </ul>
+
+    <br />
+    <br />
+
+    <ul class="lista-links">
+      <li>
+        <a
+          href="a.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="pdf-link"
+        >
+          Template da Documentação Técnica – Projeto Integrador III
+        </a>
+      </li>
+
+      <li>
+        <a
+          href="https://www.canva.com/design/DAG5h_9x8Hc/h_NfUz-1D1Y5-NUM5qHJug/edit"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="external-link"
+        >
+          Link para prototipação
+        </a>
+      </li>
+
+      <li>
+        <a
+          href="apresentacao.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="pdf-link"
+        >
+          Apresentação PI III
+        </a>
+      </li>
+
+      <li>
+        <a
+          href="codigofonte_ultimaversao.zip"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="pdf-link"
+        >
+          Código Fonte – Última Versão
+        </a>
+      </li>
+
+      <li>
+        <span class="external-link">
+          Vídeo de apresentação do sistema GetLab:
+        </span>
+      </li>
+    </ul>
+    <video
+      controls
+      width="640"
+      height="360"
+      style="display: block; margin: 20px auto"
+    >
+      <source src="video1.mp4" type="video/mp4" />
+      Seu navegador não suporta o elemento de vídeo.
+    </video>
   </body>
 </html>
